--- a/portfolio.html
+++ b/portfolio.html
@@ -311,7 +311,7 @@
                         </ul>
                     </div>
                     <div class="footer-box">
-                        <p class="input-label" for="footer-email">Subscribe to our newsletter</label>
+                        <p class="input-title" for="footer-email">Subscribe to our newsletter</label>
         
                         <form footer-form>
                             <input class="input-email" id="footer-email" type="email" name="email" placeholder="E-mail">
