--- a/portfolio.html
+++ b/portfolio.html
@@ -72,10 +72,10 @@
                                     <a class="project-info link" href="/">
                                         <div class="product-thumb">
                                             <img src="./images/techno-min.jpg" alt="human" width="370">                                
-                                                    <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus 
-                                                        distribution platform. </br>
-                                                        Companies use this platform for </br> digital espionage
-                                                    and attacks on </br> competitors' secure servers.</p>
+                                                    <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus 
+                                                        distribution platform. <br>
+                                                        Companies use this platform for <br> digital espionage
+                                                    and attacks on <br> competitors' secure servers.</p>
                                         </div>
                                         <div class="project-box">
                                             <h2 class="project-title">
@@ -92,10 +92,10 @@
                                     <a class="project-info link" href="/">
                                         <div class="product-thumb">
                                             <img src="./images/neworlean-min.jpg" alt="human" width="370">
-                                                    <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus
-                                                    distribution platform. </br>
-                                                    Companies use this platform for </br> digital espionage
-                                                    and attacks on </br> competitors' secure servers.</p>
+                                                    <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus
+                                                    distribution platform. <br>
+                                                    Companies use this platform for <br> digital espionage
+                                                    and attacks on <br> competitors' secure servers.</p>
 
                                         </div>
                                         <div class="project-box">
@@ -112,10 +112,10 @@
                                     <a class="project-info link" href="/">
                                         <div class="product-thumb">
                                             <img src="./images/seafood-min.jpg" alt="human" width="370">
-                                                    <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus
-                                                    distribution platform. </br>
-                                                    Companies use this platform for </br> digital espionage
-                                                    and attacks on </br> competitors' secure servers.</p>
+                                                    <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus
+                                                    distribution platform. <br>
+                                                    Companies use this platform for <br> digital espionage
+                                                    and attacks on <br> competitors' secure servers.</p>
                                         </div>
                                         <div class="project-box">
                                             <h2 class="project-title">
@@ -132,10 +132,10 @@
                                         <div class="product-thumb">
                                             <img src="./images/prime-min.jpg" alt="human" width="370">                               
 
-                                                                <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus
-                                                                distribution platform. </br>
-                                                                Companies use this platform for </br> digital espionage
-                                                                and attacks on </br> competitors' secure servers.</p>
+                                                                <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus
+                                                                distribution platform. <br>
+                                                                Companies use this platform for <br> digital espionage
+                                                                and attacks on <br> competitors' secure servers.</p>
 
                                         </div>
                                         <div class="project-box">
@@ -154,10 +154,10 @@
                                             <img src="./images/boxes-min.jpg" alt="human" width="370">
                                 
 
-                                                    <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus
-                                                    distribution platform. </br>
-                                                    Companies use this platform for </br> digital espionage
-                                                    and attacks on </br> competitors' secure servers.</p>
+                                                    <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus
+                                                    distribution platform. <br>
+                                                    Companies use this platform for <br> digital espionage
+                                                    and attacks on <br> competitors' secure servers.</p>
 
                                         </div>
                                         <div class="project-box">
@@ -174,10 +174,10 @@
                                     <a class="project-info link" href="/">
                                         <div class="product-thumb">
                                             <img src="./images/inspiration-min.jpg" alt="human" width="370">
-                                                    <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus
-                                                    distribution platform. </br>
-                                                    Companies use this platform for </br> digital espionage
-                                                    and attacks on </br> competitors' secure servers.</p>     
+                                                    <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus
+                                                    distribution platform. <br>
+                                                    Companies use this platform for <br> digital espionage
+                                                    and attacks on <br> competitors' secure servers.</p>     
                                         </div>
                                         <div class="project-box">
                                             <h2 class="project-title">
@@ -193,10 +193,10 @@
                                     <a class="project-info link" href="/">
                                         <div class="product-thumb">
                                             <img src="./images/limited-min.jpg" alt="human" width="370">
-                                            <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus
-                                            distribution platform. </br>
-                                            Companies use this platform for </br> digital espionage
-                                            and attacks on </br> competitors' secure servers.</p>
+                                            <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus
+                                            distribution platform. <br>
+                                            Companies use this platform for <br> digital espionage
+                                            and attacks on <br> competitors' secure servers.</p>
                                         </div>
                                         <div class="project-box">
                                             <h2 class="project-title">
@@ -212,10 +212,10 @@
                                     <a class="project-info link" href="/">
                                         <div class="product-thumb">
                                             <img src="./images/LAB-min.jpg" alt="human" width="370">
-                                            <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus
-                                            distribution platform. </br>
-                                            Companies use this platform for </br> digital espionage
-                                            and attacks on </br> competitors' secure servers.</p>
+                                            <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus
+                                            distribution platform. <br>
+                                            Companies use this platform for <br> digital espionage
+                                            and attacks on <br> competitors' secure servers.</p>
                                         </div>
                                         <div class="project-box">
                                             <h2 class="project-title">
@@ -231,10 +231,10 @@
                                     <a class="project-info link" href="/">
                                         <div class="product-thumb">
                                             <img src="./images/business-min.jpg" alt="human" width="370">
-                                            <p class="product-caption">Technoduck is a state-of-the-art </br> coronavirus
-                                            distribution platform. </br>
-                                            Companies use this platform for </br> digital espionage
-                                            and attacks on </br> competitors' secure servers.</p>
+                                            <p class="product-caption">Technoduck is a state-of-the-art <br> coronavirus
+                                            distribution platform. <br>
+                                            Companies use this platform for <br> digital espionage
+                                            and attacks on <br> competitors' secure servers.</p>
                                         </div>
                                         <div class="project-box">
                                             <h2 class="project-title">
@@ -264,7 +264,7 @@
                                 <li>
                                     <a class="adress-location"
                                         href="https://www.figma.com/exit?url=https%3A%2F%2Fbit.ly%2F3pXMvUd" target="_blank"
-                                        rel="noopener noreferrer">695 Park Ave, New York, NY 10065, </br>United States</a>
+                                        rel="noopener noreferrer">695 Park Ave, New York, NY 10065, <br>United States</a>
                                 </li>
                                 <li>
                                     <a class="adress-email" href="info@example.com">info@example.com</a>
